--- a/prepros-6.config
+++ b/prepros-6.config
@@ -25,13 +25,17 @@
       "imports": [
         "styles/partials/_setup.scss",
         "styles/partials/_global.scss",
+        "styles/partials/_header.scss",
         "styles/partials/_main.scss",
+        "styles/partials/_color-form.scss",
+        "styles/partials/_colors.scss",
+        "styles/partials/_footer.scss",
         "styles/partials/_mediaQueries.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
