--- a/prepros-6.config
+++ b/prepros-6.config
@@ -32,10 +32,12 @@
         "styles/partials/_global.scss",
         "styles/partials/_header.scss",
         "styles/partials/_main.scss",
+        "styles/partials/_main-grid-options.scss",
         "styles/partials/_color-form.scss",
         "styles/partials/_colors.scss",
+        "styles/partials/_main-grid.scss",
         "styles/partials/_footer.scss",
-        "styles/partials/_mediaQueries.scss"
+        "styles/partials/_media-queries.scss"
       ]
     }
   ],
